bookinfo-canary-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: bookinfo-reviews
spec:
    hosts:
    - reviews
    http:
    - route:
      - destination:
          host: reviews
          subset: v1
        weight: 80
      - destination:
          host: reviews
          subset: v2
        weight: 15
      - destination:
          host: reviews
          subset: v3
        weight: 5
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: bookinfo-reviews
spec:
    host: reviews
    subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
