bookinfo-fault-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: bookinfo-details-fault
spec:
    hosts:
    - details
    http:
    - route:
      - destination:
          host: details
      fault:
        abort:
            httpStatus: 500
            percentage:
                value: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: bookinfo-reviews-fault
spec:
    hosts:
    - reviews
    http:
    - route:
      - destination:
          host: reviews
      fault:
        abort:
            httpStatus: 500
            percentage:
                value: 30
