istio-system.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: istio-system
    namespace: istio-system
spec:
    rules:
    - host: istio-dashboard.io
      http:
        paths:
        - path: /*
          backend:
            serviceName: grafana
            servicePort: 3000
    - host: istio-tracing.io
      http:
        paths:
        - path: /*
          backend:
            serviceName: tracing
            servicePort: 9411
    - host: istio-logs-database.io
      http:
        paths:
        - path: /*
          backend:
            serviceName: prometheus
            servicePort: 9090
    - host: istio-kiali.io
      http:
        paths:
        - path: /*
          backend:
            serviceName: kiali
            servicePort: 20001
